# fixedPoint

./: .gitignore  CMakeLists.txt  CommitLog.txt  FixedPoint.cpp  FixedPoint.h  Makefile  README.md  gitMessage.txt
example/: CMakeLists.txt
example/src/: fixedPointMain.cpp
inc/: FixedPoint.h  FixedPoint.hpp  fixedPoint.hpp
src/: FixedPoint.cpp  fixedPoint.cpp
